feat(launcher): start the product workbench without the incubator vector module (slice V3b)
Building on the V3a Vector-API isolation (commit 2d34ee2: only
VectorFloatMathOps imports jdk.incubator.vector, loaded reflectively with a
scalar fallback), the productive Workbench launchers no longer force the
incubator module.

Productive launchers (flag removed):
- WorkbenchLauncher.java: child-JVM command now built by a testable
  buildCommand(javaExe, jarPath, args) WITHOUT --add-modules=jdk.incubator.vector.
- directml-workbench/packaging/launcher.ps1: dropped --add-modules from the
  java invocation (comment explains how to opt back in).

Kept WITH the module (unchanged): build.gradle compileJava/compileTestJava
compilerArgs, the Test jvmArgs, and the JavaExec (gradle run) jvmArgs. Removing
the module from compile is a later optional V4 slice (would only silence the
incubator build warning; the product already starts without it).

Message accuracy: Qwen2Runtime's "SIMD DISABLED" warning claimed the Workbench
launcher adds the flag automatically — now false. Reworded to state scalar
fallback is the launcher default and SIMD is opt-in via
--add-modules=jdk.incubator.vector (JAVA_TOOL_OPTIONS or direct java -jar).
Message text only; no logic / default / runtime-switch change.

Build hygiene: the java8 launcher module opts out of the root junit-bom, so its
testRuntimeOnly junit-platform-launcher had no version and could not resolve
offline; pinned to 1.10.2 (matches junit-jupiter 5.10.2) so the launcher tests
run.

Regression guard: WorkbenchLauncherTest.buildCommand_doesNotRequireIncubator-
VectorModule keeps the flag from creeping back into the product launcher.

No-module smoke (test JVM without --add-modules, compile flag retained) — all
green: NoVectorModuleLoadabilityTest 1/1, SmolLM2NativeWarpExecutorTest 4/4,
QwenDecoderOnlySessionE2eTest 1/1, DirectMlMiniLmEmbeddingReferenceTest 5/5,
RerankerRealModelReferenceTest 6/6 (incl. batch=5). With the module the
launcher